--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Max Express</string>
+    <string name="banner">Visita la ciudad con toda la seguridad del mundo</string>
+    <string name="conductor">CONDUCTOR</string>
+    <string name="cliente">CLIENTE</string>
 </resources>
