Implementacion de la funcionalidad de login con usuario existente en la Base de datos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="nombres">Nombres</string>
     <string name="correo">Correo</string>
     <string name="clave">Clave</string>
+    <string name="ingresar">INGRESAR</string>
 </resources>
